Fix header contrast in dark mode

--- a/_sass/_components/_header.scss
+++ b/_sass/_components/_header.scss
@@ -26,5 +26,6 @@
 @include darkMode() {
   .header {
     background-image: url("/assets/images/global/header-dark.jpg");
+    box-shadow: inset 0 0 0 1000px rgba(0, 15, 35, $g-box-shadow-inset-opacity);
   }
 }
